--- a/p/pi/pig/pigtailpals.com.html
+++ b/p/pi/pig/pigtailpals.com.html
@@ -1,7 +1,12 @@
-<!--The following is the downloaded HTML source of the pigtailpals.com privacy policy that was archived on 2016-11-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161107215613id_/http%3A//www.pigtailpals.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pigtailpals.com privacy policy that was archived on 2017-04-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170430001524id_/http%3A//www.pigtailpals.com/privacypolicy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head><title>Pigtail Pals and Ballcap Buddies Empowering Apparel for Kids</title><meta name="Keywords" content="Pigtail Pals and Ballcap Buddies, Pigtail Pals, Pigtail Pals Ballcap Buddies, Redefine Girly, Redefining Girly, empowering t-shirts for girls, girl power, feminist t-shirts, girl empowerment, girl power products, gender neutral clothes, empowering boys shirts, empowering girl shirts"><link rel="stylesheet" type="text/css" href="css-base.css"><link rel="stylesheet" type="text/css" href="css-element.css"><link rel="stylesheet" type="text/css" href="css-contents.css"><link rel="stylesheet" type="text/css" href="css-edits.css"></head><body class="vertical" id="maintype"><script type="text/javascript" async="" src="//np.lexity.com/embed/YA/9c2bcaf96a99ddd97b6b0106062f40be?id=e77a1cd8b8ba"></script><script type="text/javascript" id="yfc_loader" src="https://s.yimg.com/sv/store/yfc/js/0.15/loader_5cee7f2.js?q=yhst-87537560351670&amp;ts=1461533409&amp;p=1&amp;h=order.store.yahoo.net"></script> <div id="ys_superbar">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head><script type="text/javascript" async="" src="//np.lexity.com/embed/YA/9c2bcaf96a99ddd97b6b0106062f40be?id=e77a1cd8b8ba"></script><script type="text/javascript"> 
+ <!-- 
+ (new Image).src="https://store.yahoo.net/cgi-bin/refsd?e=http://pigtailpals.com/privacypolicy.html&h=pigtailpals.com&v=1.0&dr=" + escape(document.referrer); 
+ --> 
+ </script>
+<title>Pigtail Pals and Ballcap Buddies Empowering Apparel for Kids</title><meta name="Keywords" content="Pigtail Pals and Ballcap Buddies, Pigtail Pals, Pigtail Pals Ballcap Buddies, Redefine Girly, Redefining Girly, empowering t-shirts for girls, girl power, feminist t-shirts, girl empowerment, girl power products, gender neutral clothes, empowering boys shirts, empowering girl shirts"><link rel="stylesheet" type="text/css" href="css-base.css"><link rel="stylesheet" type="text/css" href="css-element.css"><link rel="stylesheet" type="text/css" href="css-contents.css"><link rel="stylesheet" type="text/css" href="css-edits.css"></head><body class="vertical" id="maintype"><script type="text/javascript" id="yfc_loader" src="https://s.yimg.com/sv/store/yfc/js/0.15/loader_5cee7f2.js?q=yhst-87537560351670&amp;ts=1461533409&amp;p=1&amp;h=order.store.yahoo.net"></script> <div id="ys_superbar">
 	   <div id="ys_cpers">
 		<div id="yscp_welcome_msg"></div>
 		<div id="yscp_signin_link"></div>
@@ -31,7 +36,7 @@ csell_env = 'bf1';
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
- </script> <script type="text/javascript" src="http://l.yimg.com/a/ult/ylc_1.9.js"></script> <script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
+ </script> <script type="text/javascript" src="https://s.yimg.com/lq/ult/ylc_1.9.js"></script> <script type="text/javascript" src="https://s.yimg.com/lq/lib/smbiz/store/csell/js/beacon-1.3.6.4.js">
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
@@ -39,7 +44,7 @@ csell_env = 'bf1';
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
-function csell_GLOBAL_INIT_TAG() { var csell_token_map = {}; csell_token_map['TOK_ITEM_ID_LIST'] = 'privacypolicy'; csell_token_map['TOK_BEACON_TYPE'] = 'prod'; csell_token_map['TOK_RAND_KEY'] = 't'; csell_token_map['TOK_SPACEID'] = '2022276099'; csell_token_map['TOK_IS_ORDERABLE'] = '2'; csell_token_map['TOK_STORE_ID'] = 'yhst-87537560351670'; csell_token_map['TOK_URL'] = 'http://geo.yahoo.com'; csell_token_map['TOK_ORDER_HOST'] = 'order.store.yahoo.net';  c = csell_page_data; var x = (typeof storeCheckoutDomain == 'string')?storeCheckoutDomain:'order.store.yahoo.net'; var t = csell_token_map; c['s'] = t['TOK_SPACEID']; c['url'] = t['TOK_URL']; c['si'] = t[ts]; c['ii'] = t['TOK_ITEM_ID_LIST']; c['bt'] = t['TOK_BEACON_TYPE']; c['rnd'] = t['TOK_RAND_KEY']; c['io'] = t['TOK_IS_ORDERABLE']; YStore.addItemUrl = 'http%s://'+x+'/'+t[ts]+'/ymix/MetaController.html?eventName.addEvent&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_itemId=%s&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_quantity=1&ysco_key_cs_item=1&sectionId=ysco.cart&ysco_key_store_id='+t[ts]; } 
+function csell_GLOBAL_INIT_TAG() { var csell_token_map = {}; csell_token_map['TOK_ITEM_ID_LIST'] = 'privacypolicy'; csell_token_map['TOK_BEACON_TYPE'] = 'prod'; csell_token_map['TOK_RAND_KEY'] = 't'; csell_token_map['TOK_SPACEID'] = '2022276099'; csell_token_map['TOK_IS_ORDERABLE'] = '2'; csell_token_map['TOK_STORE_ID'] = 'yhst-87537560351670'; csell_token_map['TOK_URL'] = 'https://geo.yahoo.com'; csell_token_map['TOK_ORDER_HOST'] = 'order.store.yahoo.net';  c = csell_page_data; var x = (typeof storeCheckoutDomain == 'string')?storeCheckoutDomain:'order.store.yahoo.net'; var t = csell_token_map; c['s'] = t['TOK_SPACEID']; c['url'] = t['TOK_URL']; c['si'] = t[ts]; c['ii'] = t['TOK_ITEM_ID_LIST']; c['bt'] = t['TOK_BEACON_TYPE']; c['rnd'] = t['TOK_RAND_KEY']; c['io'] = t['TOK_IS_ORDERABLE']; YStore.addItemUrl = 'http%s://'+x+'/'+t[ts]+'/ymix/MetaController.html?eventName.addEvent&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_itemId=%s&cartDS.shoppingcart_ROW0_m_orderItemVector_ROW0_m_quantity=1&ysco_key_cs_item=1&sectionId=ysco.cart&ysco_key_store_id='+t[ts]; } 
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
@@ -47,6 +52,6 @@ function csell_REC_VIEW_TAG() {  var env = (typeof csell_env == 'string')?csell_
 </script>
 <script type="text/javascript">
 // Begin Yahoo Store Generated Code
-var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'http://yhst-87537560351670.csell.store.yahoo.net/cs/recommend?itemids=privacypolicy&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'false'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS']; </script> <script type="text/javascript" src="http://l.yimg.com/a/lib/smbiz/store/csell/js/recs-1.3.2.2.js"></script> <script type="text/javascript">
+var csell_token_map = {}; csell_token_map['TOK_PAGE'] = 'p'; csell_token_map['TOK_WS_URL'] = 'https://yhst-87537560351670.csell.store.yahoo.net/cs/recommend?itemids=privacypolicy&location=p'; csell_token_map['TOK_SHOW_CS_RECS'] = 'false'; csell_token_map['TOK_CURR_SYM'] = '$';  var t = csell_token_map; csell_GLOBAL_INIT_TAG(); YStore.page = t['TOK_PAGE']; YStore.currencySymbol = t['TOK_CURR_SYM']; YStore.crossSellUrl = t['TOK_WS_URL']; YStore.showCSRecs = t['TOK_SHOW_CS_RECS']; </script> <script type="text/javascript" src="https://s.yimg.com/ae/store/secure/recs-1.3.2.2.js"></script> <script type="text/javascript">
 </script>
 <script type="text/javascript">(function (d, w) { var f = function () { var x = d.getElementsByTagName('SCRIPT')[0]; var s = d.createElement('SCRIPT'); s.type = 'text/javascript'; s.async = true; s.src = '//np.lexity.com/embed/YA/9c2bcaf96a99ddd97b6b0106062f40be?id=e77a1cd8b8ba'; x.parentNode.insertBefore(s, x); }; w.attachEvent ? w.attachEvent('onload',f) : w.addEventListener('load',f,false); }(document, window)); </script></body></html>
