--- a/b/be/bet/bettersearch.ga.html
+++ b/b/be/bet/bettersearch.ga.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bettersearch.ga privacy policy that was archived on 2016-11-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161128102457id_/http%3A//www.bettersearch.ga/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bettersearch.ga privacy policy that was archived on 2017-04-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170430172959id_/http%3A//bettersearch.ga/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
