--- a/e/em/emu/emusic.com.html
+++ b/e/em/emu/emusic.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the emusic.com privacy policy that was archived on 2016-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161229104955id_/http%3A//www.emusic.com/info/help/privacy-policy-us) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the emusic.com privacy policy that was archived on 2017-05-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170501230910id_/http%3A//www.emusic.com/info/help/privacy-policy-us) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-US" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://ogp.me/ns/fb#" xmlns:emusiclive="http://ogp.me/ns/fb/emusiclive#"><head>
 <title>Privacy Policy | Stimulating Curious Musical Minds | eMusic</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta charset="utf-8">
+<meta charset="utf-8"><script src="https://js-agent.newrelic.com/nr-1026.min.js"></script><script type="text/javascript" async="" src="https://ak.sail-horizon.com/horizon/v1.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=165428970208592"></script><script type="text/javascript" src="//web.localytics.com/v3/localytics.js"></script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var o=n[t]={exports:{}};e[t][0].call(o.exports,function(n){var o=e[t][1][n];return r(o||n)},o,o.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<t.length;o++)r(t[o]);return r}({1:[function(e,n,t){function r(){}function o(e,n,t){return function(){return i(e,[c.now()].concat(u(arguments)),n?null:this,t),n?void 0:this}}var i=e("handle"),a=e(2),u=e(3),f=e("ee").get("tracer"),c=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],d="api-",l=d+"ixn-";a(p,function(e,n){s[n]=o(d+n,!0,"api")}),s.addPageAction=o(d+"addPageAction",!0),s.setCurrentRouteName=o(d+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,o="function"==typeof n;return i(l+"tracer",[c.now(),e,t],r),function(){if(f.emit((o?"":"no-")+"fn-start",[c.now(),r,o],t),o)try{return n.apply(this,arguments)}finally{f.emit("fn-end",[c.now()],t)}}}};a("setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=o(l+n)}),newrelic.noticeError=function(e){"string"==typeof e&&(e=new Error(e)),i("err",[e,c.now()])}},{}],2:[function(e,n,t){function r(e,n){var t=[],r="",i=0;for(r in e)o.call(e,r)&&(t[i]=n(r,e[r]),i+=1);return t}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],3:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,o=t-n||0,i=Array(o<0?0:o);++r<o;)i[r]=e[n+r];return i}n.exports=r},{}],4:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function o(e){function n(e){return e&&e instanceof r?e:e?f(e,u,i):i()}function t(t,r,o,i){if(!d.aborted||i){e&&e(t,r,o);for(var a=n(o),u=m(t),f=u.length,c=0;c<f;c++)u[c].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function l(e,n){v[e]=m(e).concat(n)}function m(e){return v[e]||[]}function w(e){return p[e]=p[e]||o(t)}function g(e,n){c(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var v={},y={},b={on:l,emit:t,get:w,listeners:m,context:n,buffer:g,abort:a,aborted:!1};return b}function i(){return new r}function a(){(s.api||s.feature)&&(d.aborted=!0,s=d.backlog={})}var u="nr@context",f=e("gos"),c=e(2),s={},p={},d=n.exports=o();d.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(o.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(i){}return e[n]=r,r}var o=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){o.buffer([e],r),o.emit(e,n,t)}var o=e("ee").get("handle");n.exports=r,r.ee=o},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,i,function(){return o++})}var o=1,i="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=h.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();c(y,function(n,t){e[n]||(e[n]=t)}),f("mark",["onload",a()+h.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function o(){"complete"===d.readyState&&i()}function i(){f("mark",["domContent",a()+h.offset],null,"api")}function a(){return E.exists&&performance.now?Math.round(performance.now()):(u=Math.max((new Date).getTime(),u))-h.offset}var u=(new Date).getTime(),f=e("handle"),c=e(2),s=e("ee"),p=window,d=p.document,l="addEventListener",m="attachEvent",w=p.XMLHttpRequest,g=w&&w.prototype;NREUM.o={ST:setTimeout,CT:clearTimeout,XHR:w,REQ:p.Request,EV:p.Event,PR:p.Promise,MO:p.MutationObserver};var v=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1026.min.js"},b=w&&g&&g[l]&&!/CriOS/.test(navigator.userAgent),h=n.exports={offset:u,now:a,origin:v,features:{},xhrWrappable:b};e(1),d[l]?(d[l]("DOMContentLoaded",i,!1),p[l]("load",r,!1)):(d[m]("onreadystatechange",o),p[m]("onload",r)),f("mark",["firstbyte",u],null,"api");var x=0,E=e(4)},{}]},{},["loader"]);</script>
 		<meta name="robots" content="noindex, follow">
-		<script type="text/javascript" async="" src="https://ak.sail-horizon.com/horizon/v1.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=165428970208592"></script><script type="text/javascript" src="//web.localytics.com/v3/localytics.js"></script><script type="text/javascript">
+		<script type="text/javascript">
 if ( !document.cookie.match( 'ga_tmp_referrer' ) )
 	document.cookie = "ga_tmp_referrer=" + escape(document.referrer) + ";path=/";
 
@@ -52,6 +52,7 @@ if ( !document.cookie.match( 'omniture_tmp_referrer' ) )
 <script async="" src="//www.google-analytics.com/analytics.js"></script>
 <!-- End Google Analytics -->
 
+    <meta name="google-site-verification" content="Kbm703BclNV9gK3yd9QCSRltq1lvwrwwb1iefweOu9U">
 
 <!-- Localytics in header .php -->
 
@@ -70,10 +71,6 @@ if ( !document.cookie.match( 'omniture_tmp_referrer' ) )
 <!-- end of Localytics -->
 
 
-<!--
-	generated in 0.201 seconds
-	40403 bytes batcached for 300 seconds
--->
 </head>
 <body class="music-page page page-child parent-pageid-112 js" data-cache="aLaCarte" data-user="0" data-region="US" data-cc="US" data-facebook="disabled" data-site-id="1">
 <script type="text/javascript">document.body.className = document.body.className ? document.body.className + ' js' : 'js';</script>
@@ -440,11 +437,11 @@ if ( !document.cookie.match( 'omniture_tmp_referrer' ) )
 	<li><a href="http://www.emusic.com/support/">Contact Us</a></li>
 </ul>
 </li>
-</ul></div>		<p><a href="/legal/index.html">© 1998 - 2016 eMusic.com Inc.</a>
+</ul></div>		<p><a href="/legal/index.html">© 1998 - 2017 eMusic.com Inc.</a>
 		eMusic and the eMusic logo are either registered trademarks or trademarks in the USA or other countries. All rights reserved.
 		</p>
 			<p class="partners rovi">
-		Portions of Content provided by Rovi Corporation. © 2016 Rovi Corporation. <br>
+		Portions of Content provided by Rovi Corporation. © 2017 Rovi Corporation. <br>
 		For personal non-commercial use only. All rights reserved.
 		</p>
 		<div class="house-ad-target" data-target="global-footer"></div>
@@ -479,7 +476,7 @@ if ( !document.cookie.match( 'omniture_tmp_referrer' ) )
 </script>
 
 
-
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"05a2444c32","applicationID":"11301135","transactionName":"YldVZBBWWUVRBxEIDlsddlMWXlhYHxQEBgQ=","queueTime":0,"applicationTime":419,"atts":"ThBWElhMSks=","errorBeacon":"bam.nr-data.net","agent":""}</script>
 <script type="text/html" id="tmpl-radio-item">
 <span class="col1"><a data-id="{{{ data.id }}}" class="radio"></a></span>
 <span class="col2"><a title="{{{ data.name }}}">{{{ data.name }}}</a></span>
