--- a/v/va/vau/vaughnlive.tv.html
+++ b/v/va/vau/vaughnlive.tv.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vaughnlive.tv privacy policy that was archived on 2016-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161219210750id_/http%3A//vaughnlive.tv/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vaughnlive.tv privacy policy that was archived on 2017-05-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170501231739id_/http%3A//vaughnlive.tv/privacy) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://opengraphprotocol.org/schema/" xml:lang="en" lang="en"><head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -7,21 +7,22 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="keywords" content="webcam, webcams, cam, cams, mobile, live camera, live people, live shows, live tv, live cities, city cams, digital camera, netcam, internet camera, webcast, livecam, livecams, streaming video, ip camera, live camera, streaming, video, vaughn">
 <meta name="author" content="Vaughn Live">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//d2na2p72vtqyok.cloudfront.net/client-embed/5d1c7bfb-e858-454a-ab25-1b10412851c3.js" async=""></script><script type="text/javascript" async="" src="https://s.po.st/static/v4/post-widget.js#publisherKey=kp3741hb68ocvru5buo4"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=f2befc48d1/cloudflare.min.js"></script><script type="text/javascript">
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://s.po.st/static/v4/post-widget.js#publisherKey=kp3741hb68ocvru5buo4"></script><script src="//d2na2p72vtqyok.cloudfront.net/client-embed/5d1c7bfb-e858-454a-ab25-1b10412851c3.js" async=""></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js"></script><script type="text/javascript">
 //<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:1482167406,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"97fd472325e2240d24cd54c977cc5f1b",petok:"0f38ee4c3a7d1019bfd3535fe7d1126af22abf92-1482181671-1800",zone:"vaughnlive.tv",rocket:"0",apps:{"ga_key":{"ua":"UA-24793147-1","ga_bs":"2"},"abetterbrowser":{"ie":"9"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=f2befc48d1/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"95264f54e84602dd2d1ea2ecca8017b8",petok:"7f6814ed0334a4f0b149a49c576b1530074a6f8d-1493680659-1800",zone:"vaughnlive.tv",rocket:"0",apps:{"ga_key":{"ua":"UA-24793147-1","ga_bs":"2"},"abetterbrowser":{"ie":"9"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
 //]]>
 </script>
 <script type="text/javascript" src="//cdn.vaughnsoft.com/js/jquery-1.11.1.min.js"></script>
 <script>var fAdB = undefined, FAdB = undefined;</script>
 <meta name="description" content="Possibly the greatest LIVE streaming video site on the internet!">
-<link rel="stylesheet" type="text/css" href="/4446507354/css/main.css">
-<link rel="stylesheet" type="text/css" href="/4446507354/css/channel_header.css">
-<script type="text/javascript" src="/4446507354/js/header.js"></script>
+<link rel="stylesheet" type="text/css" href="/4480855926/css/main.css">
+<link rel="stylesheet" type="text/css" href="/4480855926/css/channel_header.css">
+<script type="text/javascript" src="/4480855926/js/header.js"></script>
 <script type="text/javascript" src="/js/fadb.js"></script>
 <script>var prePls = false; var preLoader = function() { Core.preLoad("http://cdn.vaughnsoft.com/abvs/avdff4256cbfabacdb3402b02302340902389edcba378201.gif", "abvsDynamic"); $(window).ready(function() { prePls = true;  }); }
         function getPrePls() { return prePls; }
         if(typeof  FAdB === 'undefined') { $(document).ready(preLoader); } else { fAdB.on(true, preLoader); } fAdB = undefined;</script>
+ <script data-cfasync="false" type="text/javascript">/*<![CDATA[*/(function (a, c, s, u){'Insticator'in a || (a.Insticator={ad:{loadAd: function (b){Insticator.ad.q.push(b)}, q: []}, helper:{}, embed:{}, version: "3.0", q: [], load: function (t, o){Insticator.q.push({t: t, o: o})}}); var b=c.createElement(s); b.src=u; b.async=!0; var d=c.getElementsByTagName(s)[0]; d.parentNode.insertBefore(b, d)})(window, document, 'script', '//d2na2p72vtqyok.cloudfront.net/client-embed/5d1c7bfb-e858-454a-ab25-1b10412851c3.js');/*]]>*/</script> 
 <script type="text/javascript">
             (function () {
                 var s = document.createElement('script');
@@ -33,9 +34,6 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:1482167406,byc:0,owlid
                 x.parentNode.insertBefore(s, x);
              })();
         </script>
- 
-<script data-cfasync="false" type="text/javascript">/*<![CDATA[*/(function (a, c, s, u){'Insticator'in a || (a.Insticator={ad:{loadAd: function (b){Insticator.ad.q.push(b)}, q: []}, helper:{}, embed:{}, version: "3.0", q: [], load: function (t, o){Insticator.q.push({t: t, o: o})}}); var b=c.createElement(s); b.src=u; b.async=!0; var d=c.getElementsByTagName(s)[0]; d.parentNode.insertBefore(b, d)})(window, document, 'script', '//d2na2p72vtqyok.cloudfront.net/client-embed/5d1c7bfb-e858-454a-ab25-1b10412851c3.js');/*]]>*/</script>
- 
 <script type="text/javascript">
 /* <![CDATA[ */
 var _gaq = _gaq || [];
@@ -59,7 +57,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div class="header">
 <div class="header_spread">
 <div class="menu2Home">
-<a href="/" target="_top"><img src="/img/vaughnlive_header_christmas.png" class="vaughnlive_header"></a>
+<a href="/" target="_top"><img src="/img/vaughnlive_header_est.png" class="vaughnlive_header"></a>
 </div>
 <div class="menu2Browse" onclick="primary.browseOpen();return false;" onmouseover="primary.browseOver();" onmouseout="primary.browseOut();">
 <div class="menuBtnBlue mvntooltip-bottom headerMenu" id="menu2Browse" style="padding:15px; width:85px; display:block; font-size:14px; color:#fff; font-weight:bold;" mvn-tooltip="Browse LIVE Channels">
@@ -145,15 +143,14 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div class="clear"></div>
 <div class="height10px"></div>
 <div class="height10px"></div>
-<div class="height10px"></div>
 <div class="clear"></div>
 <div class="abvsDynamic">
 <center>
-<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
- 
-<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2455275537919252" data-ad-slot="5515263474" data-ad-format="auto"></ins>
-<script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
+<script type="text/javascript" src="//static.criteo.net/js/ld/publishertag.js"></script>
+<script type="text/javascript">
+                Criteo.DisplayAd({
+                    "zoneid": 374191,
+                    "async": false});
                 </script>
 </center>
 </div>
@@ -242,19 +239,19 @@ at the top of this Privacy Policy.
 
 <div class="clear"></div>
 <div class="footerWrapper">
-© 2016 VaughnSoft | <a href="/copyright" class="footerLink">Copyright</a> | <a href="/terms" class="footerLink">Terms</a> | <a href="/privacy" class="footerLink">Privacy</a> | <a href="/agreement" class="footerLink">Game &amp; VCoin Agreement</a>
+© 2017 VaughnSoft | <a href="/copyright" class="footerLink">Copyright</a> | <a href="/terms" class="footerLink">Terms</a> | <a href="/privacy" class="footerLink">Privacy</a> | <a href="/agreement" class="footerLink">Game &amp; VCoin Agreement</a>
 </div>
 <div class="clear"></div>
 <div class="height15px"></div>
-<script type="text/javascript" src="/4446507354/js/footer.js"></script>
+<script type="text/javascript" src="/4480855926/js/footer.js"></script>
 <script type="text/javascript">
-        /*var MvnApi = new sApi("#vl", "guest", "guest");
+        var MvnApi = new sApi("#-", "", "");
         $(window).ready(function() {
             MvnApi.sApiRun();
         });
         $(window).unload(function() {
             MvnApi.exit();
-        });*/
+        });
     </script>
 
 </body></html>
