--- a/m/ma/mak/makesparties.com.html
+++ b/m/ma/mak/makesparties.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the makesparties.com privacy policy that was archived on 2016-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160611055507id_/http%3A//www.4funparties.com/terms_privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the makesparties.com privacy policy that was archived on 2017-05-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170502021249id_/http%3A//www.4funparties.com/terms_privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- <meta name="globalsign-domain-verification" content="3mXtUehOvWnIdyrEDpNPQ9urGNAz1BDcZEDP0Tj3X0"> 
+ <meta name="globalsign-domain-verification" content="6qfKc1N-84YpvdA5M7r6MI0UxypZielkfPE3x9xVW_"> 
 <meta name="Description" content="4FunParties.com offers thousands of party supplies, dance floor giveaways, event novelties, licensed paper goods, and theme accessories to enhance your party and accent its theme.
 We feature decorations, occasion gifts and favors. Plus, we offer the largest selection of party hats and headgear, inflatables, masks, noisemakers, jewelry, sunglasses, and much more.">
 <meta name="Keywords" content="">
@@ -11,14 +11,15 @@ We feature decorations, occasion gifts and favors. Plus, we offer the largest se
 <meta name="robots" content="index, follow">
 <meta name="GOOGLEBOT" content="INDEX, FOLLOW">
 
-<link rel="canonical" href="http://www.4funparties.com/terms_privacy.asp">
+<link rel="canonical" href="https://www.4funparties.com/terms_privacy.asp">
 		
+<link type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/themes/base/jquery-ui.css" rel="stylesheet">
+<link type="text/css" href="/a/c/default.css" rel="stylesheet">
+
 
 <script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js"></script>
 
-<link type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/themes/base/jquery-ui.css" rel="stylesheet">
-<link type="text/css" href="/a/c/default.css" rel="stylesheet">
 
 
 <script type="text/javascript">
@@ -34,7 +35,7 @@ We feature decorations, occasion gifts and favors. Plus, we offer the largest se
     var PageText_843 = "Subtotal";
     var PageText_844 = "items in cart";
 </script>
-<script type="text/javascript" src="/a/j/volusion.js?7.31.0.717"></script>
+<script type="text/javascript" src="/a/j/volusion.js?7.54.0.2201"></script>
 <script type="text/javascript">
     (function ($) {
         volusion.ready(function () {
@@ -56,19 +57,20 @@ We feature decorations, occasion gifts and favors. Plus, we offer the largest se
         });
     } (jQuery));
 </script>
+<link type="text/css" rel="stylesheet" href="/a/contentbuilder/assets/default/content.css">
 
 
 <script type="text/javascript" src="/a/j/soft_add.js"></script>
 <link type="text/css" rel="stylesheet" href="/a/c/soft_add.css">
 <script type="text/javascript">
 	var global_Config_EnableDisplayOptionProducts = 'False';	
-	var global_Config_ForceSecureShoppingCartPage = false;
+	var global_Config_ForceSecureShoppingCartPage = true;
 	var global_PageText_OtherItemsAdded = '(All other items have been added to the cart)';
 	var Config_EnableSoftAddToCart = true;
 </script>
 
 <script type="text/javascript" src="/a/j/soft_add_mult.js"></script>
-<script type="text/javascript" src="/a/j/javascripts.js?6_5_7.31.0.717"></script>
+<script type="text/javascript" src="/a/j/javascripts.js?6_5_7.54.0.2201"></script>
 
 <script type="text/javascript">
 	var Config_Search_Auto_Complete = false;
@@ -160,7 +162,7 @@ Date: AUGUST 2011
 <!-- ======================== HEADER ======================== -->
 <div id="header_wrapper">
 <div id="header">
-	<div id="display_homepage_title"><span itemscope="" itemtype="http://schema.org/Store"><meta itemprop="name" content="4Funparties"><a href="http://www.4funparties.com/default.asp" title="4Funparties">4Funparties</a></span></div>
+	<div id="display_homepage_title"><span class="vol-logo vol-logo--graphic" itemscope="" itemtype="http://schema.org/Store"><meta itemprop="name" content="4Funparties"><a class="vol-logo__link" href="http://www.4funparties.com/default.asp" title="4Funparties">4Funparties</a></span></div>
     
   <div id="site_tools">
         <a href="http://www.4funparties.com/default.asp">Home</a>
@@ -170,7 +172,7 @@ Date: AUGUST 2011
 	</div>
     
   <div id="phone_wrap">
-  <a href="/help_answer.asp?ID=11#250" style="text-decoration : none; color : #FFFFFF;">Free Ground Shipping on Orders over $49 Use Coupon Code SHIP49*</a>  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<font color="FF0000"> Call Us Toll Free: 1-888-438-6789</font>
+  <a href="/help_answer.asp?ID=11#250" style="text-decoration : none; color : #FFFFFF;">Free Ground Shipping on Orders over $49 Use Coupon Code SHIP49</a>  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<font color="FF0000"> Call Us Toll Free: 1-888-438-6789</font>
   </div>
 <!-- ======================== SHOPPING CART DISPLAY
     <div id="cart_wrapper">
@@ -446,10 +448,12 @@ function DropDown_ShopBy_Category_onChange(arg_value) {
 serve ads to you based on your visit to our sites and/or other 
 sites on the Internet. You may opt out of the use of the DoubleClick cookie for interest-based advertising by visiting the<a href="http://www.google.com/ads/preferences/" target="_blank"> ads preference manager</a>.<br>Alternatively, you can direct users to opt out of a third-party 
 vendor's use of cookies for interest based advertising by visiting <a href="http://www.aboutads.info/" target="_blank">aboutads.info</a>.<br><br>We may contract with third-party service providers to assist us in better understanding our site visitors. These service providers are not permitted to use the information collected on our behalf except to help us conduct and improve our business.<br><br>You can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser (like Netscape Navigator or Internet Explorer) settings. Each browser is a little different, so look at your browser Help menu to learn the correct way to modify your cookies. If you turn cookies off, you won't have access to many features that make your site experience more efficient and some of our services will not function properly. However, you can still place orders over the telephone by contacting customer service.<br><br><br><span style="font-weight: bold;">Do we disclose the information we collect to outside parties?</span><br><br>We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information unless we provide you with advance notice, except as described below. The term "outside parties" does not include 4Funparties. It also does not include website hosting partners and other parties who assist us in operating our website, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others' rights, property, or safety.<br><br>However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.<br><br><br><span style="font-weight: bold;">How can you opt-out, remove or modify information you have provided to us?</span><br><br>To modify your e-mail subscriptions, please let us know by modifying your preferences in the "My Account" section. Please note that due to email production schedules you may receive any emails already in production.<br><br>To delete all of your online account information from our database, sign into the "My Account" section of our site and remove your shipping addresses, billing addresses &amp; payment information. Please note that we may maintain information about an individual sales transaction in order to service that transaction and for record keeping.<br><br><br><span style="font-weight: bold;">Third party links</span><br><br>In an attempt to provide you with increased value, we may include third party links on our site. These linked sites have separate and independent privacy policies. We therefore have no responsibility or liability for the content and activities of these linked sites. Nonetheless, we seek to protect the integrity of our site and welcome any feedback about these linked sites (including if a specific link does not work).<br><br><br><span style="font-weight: bold;">Changes to our policy</span><br><br>If we decide to change our privacy policy, we will post those changes on this page. Policy changes will apply only to information collected after the date of the change. <span style="font-weight: bold;">This policy was last modified on August 6, 2003.</span><br><br><br><span style="font-weight: bold;">Questions and feedback</span><br><br>We welcome your questions, comments, and concerns about privacy. Please send us any and all feedback pertaining to privacy, or any other issue.<br><br><br><span style="font-weight: bold;">Online Policy Only</span><br><br>This online privacy policy applies only to information collected through our website and not to information collected offline.<br><br><br><span style="font-weight: bold;">Terms and Conditions</span><br><br>Please also visit our <a href="terms.asp">Terms and Conditions</a> section establishing the use, disclaimers, and limitations of liability governing the use of our website.<br><br><br><span style="font-weight: bold;">Your consent</span><br><br>By using our site, you consent to our privacy policy.<br><br><br>
+</div><!-- .vcb-article -->
+<textarea style="display:none;" id="articleBody_5" readonly="true"></textarea>
 
 
 	  
-          </div></td>
+          </td>
         </tr>
 </tbody></table>
 
@@ -504,11 +508,11 @@ Customer has agreed per Volusion's Terms of Service (http://www.volusion.com/agr
 <script type="text/javascript">function store_init(event){} AttachEvent(window, 'load', store_init);</script>
 
 <script type="text/javascript">
-	if (!/\/shoppingcart\.asp/i.test(window.location.pathname)) {
-		jQuery(document).ready(function() {
-			jQuery('a').each(AddCartLink)
-		});
-	}
+    if (!/\/shoppingcart\.asp/i.test(window.location.pathname)) {
+        jQuery(document).ready(function() {
+            jQuery('a').each(AddCartLink)
+        });
+    }
 </script>
 
 
